--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,4 +1,8 @@
 FROM frolvlad/alpine-oraclejdk8:slim
+
+EXPOSE 9090
+
+#Install Spring boot artifact
 VOLUME /tmp
 ADD gs-spring-boot-docker-0.1.0.jar app.jar
 RUN sh -c 'touch /app.jar'
