--- a/pom.xml
+++ b/pom.xml
@@ -6,42 +6,17 @@
     <groupId>org.springframework</groupId>
     <artifactId>gs-spring-boot-docker</artifactId>
     <version>0.1.0</version>
-    <packaging>jar</packaging>
-    <name>gs-spring-boot-docker</name>
-    <description>Simple application spring boot maven with jenkins and docker</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.4.2.RELEASE</version>
-        <relativePath />
     </parent>
 
     <properties>
-        <docker.image.prefix>ileossa</docker.image.prefix>
         <java.version>1.8</java.version>
+        <docker.image.prefix>ileossa</docker.image.prefix>
     </properties>
-
-    <build>
-	    <plugins>
-	        <plugin>
-	            <groupId>com.spotify</groupId>
-	            <artifactId>docker-maven-plugin</artifactId>
-	            <version>0.4.11</version>
-	            <configuration>
-	                <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
-	                <dockerDirectory>src/main/docker</dockerDirectory>
-	                <resources>
-	                    <resource>
-	                        <targetPath>/</targetPath>
-	                        <directory>${project.build.directory}</directory>
-	                        <include>${project.build.finalName}.jar</include>
-	                    </resource>
-	                </resources>
-	            </configuration>
-	        </plugin>
-	    </plugins>
-	</build>
 
     <dependencies>
         <dependency>
@@ -54,5 +29,34 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <!-- BUILD PLUGING SPOTIFY FOR DOCKER IMAGE -->
+			<plugin>
+	        	<groupId>com.spotify</groupId>
+	            <artifactId>docker-maven-plugin</artifactId>
+	            <version>0.4.13</version>
+	            <configuration>
+	                <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+	                <dockerDirectory>src/main/docker</dockerDirectory>
+	                <resources>
+	                    <resource>
+	                        <targetPath>/</targetPath>
+	                        <directory>${project.build.directory}</directory>
+	                        <include>${project.build.finalName}.jar</include>
+	                    </resource>
+	                </resources>
+	                <useConfigFile>true</useConfigFile>
+	                <pushImage>true</pushImage>
+	            </configuration>
+	        </plugin>
+        </plugins>
+    </build>
 
 </project>
