--- a/pom.xml
+++ b/pom.xml
@@ -52,8 +52,16 @@
 	                        <include>${project.build.finalName}.jar</include>
 	                    </resource>
 	                </resources>
+	                <!-- use  ~/.docker/config.json , you need run befor maven "docker login" -->
 	                <useConfigFile>true</useConfigFile>
+	                <!-- Push image on repo when project build -->
 	                <pushImage>true</pushImage>
+	                <!-- Overwrite tag at maven build --> 
+	                <forceTags>true</forceTags>
+	                <imageTags>
+						<imageTag>${project.version}</imageTag>
+						<imageTag>latest</imageTag>
+	                </imageTags>
 	            </configuration>
 	        </plugin>
         </plugins>
