--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,14 @@
+sudo: required
+
 language: java
 jdk:
   - oraclejdk8
+
+services:
+  - docker
+
+after_success:
+  - if ["$TRAVIS_BRANCH" == "master" ]; then
+  docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+  docker push USER/REPO;
+  fi;
