update name repo

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ services:
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
     docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-    docker push USER/REPO;
+    docker push ileossa/toto;
     fi
