update name repo

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,15 @@ jdk:
 
 services:
   - docker
+
+before_install:
+  - docker build -t ileossa/toto /src/main/docker/
+
+script:
+  - docker images ileossa/toto
+
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
     docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-    docker push USER/REPO;
+    docker push ileossa/toto;
     fi
