--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.springframework</groupId>
-    <artifactId>gs-spring-boot-docker</artifactId>
-    <version>0.1.1</version>
+    <artifactId>fondation</artifactId>
+    <version>2</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
