--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM frolvlad/alpine-oraclejdk8:slim
 
 #Install Spring boot artifact
 VOLUME /tmp
-ADD gs-spring-boot-docker-0.1.1.jar app.jar
+ADD fondation-2.jar app.jar
 RUN sh -c 'touch /app.jar'
 ENV JAVA_OPTS=""
 ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar" ]
